Add drop down of available room, check display name already exists and room case insensitive.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -171,6 +171,11 @@
   .message__title span {
     color: #999;
   }
+
+  #chat__available__rooms {
+    width: 100%;
+    background: white;
+  }
   
   @media (max-width: 600px) {
     * {
