--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -184,6 +184,11 @@
     width: 100%;
     background: white;
   }
+
+
+  #call{
+    margin: 0px 9px 0px 0px;
+  }
   
   @media (max-width: 600px) {
     * {
@@ -205,5 +210,194 @@
     .chat__footer button {
       margin-right: 0px;
     }
+
+    #call{
+      margin: 0px 0px 5px 0px;
+    }
   }
 
+.modal {
+    position: absolute;
+    z-index: 10000; /* 1 */
+    top: 0;
+    left: 0;
+    visibility: hidden;
+    width: 100%;
+    height: 100%;
+}
+
+.modal.is-visible {
+    visibility: visible;
+}
+
+.modal-overlay {
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: hsla(0, 0%, 0%, 0.5);
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 0.3s, opacity 0.3s;
+}
+
+.modal.is-visible .modal-overlay {
+  opacity: 1;
+  visibility: visible;
+  transition-delay: 0s;
+}
+
+.modal-wrapper {
+  position: absolute;
+  z-index: 9999;
+  top: 6em;
+  left: 50%;
+  width: 32em;
+  height: 400px;
+  margin-left: -16em;
+  background-color: #fff;
+  box-shadow: 0 0 1.5em hsla(0, 0%, 0%, 0.35);
+}
+
+.modal-transition {
+  transition: all 0.3s 0.12s;
+  transform: translateY(-10%);
+  opacity: 0;
+}
+
+.modal.is-visible .modal-transition {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.modal-header,
+.modal-footer,
+.modal-content, 
+.modal-content-video {
+  padding: 1em;
+}
+
+.modal-header {
+  position: relative;
+  background-color: #fff;
+  box-shadow: 0 1px 2px hsla(0, 0%, 0%, 0.06);
+  border-bottom: 1px solid #e8e8e8;
+}
+
+.modal-footer {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  height: 45px;
+  background: #1F4C69;
+  color: white;
+}
+
+.modal-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 1em;
+  color: #aaa;
+  background: none;
+  border: 0;
+}
+
+.modal-close:hover {
+  color: #777;
+}
+
+.modal-heading {
+  font-size: 1.0em;
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.modal-content, .modal-content-video > *:first-child {
+  margin-top: 0;
+}
+
+.modal-content, .modal-content-video > *:last-child {
+  margin-bottom: 0;
+}
+
+#modalbutton {
+  transition: none !important; 
+  border: none !important;
+  background: none !important;
+  padding: 10px !important;
+}
+
+@media (max-width: 600px) {
+  .modal-wrapper {
+    left: 0;
+    right: 0;
+    margin-top: 4px;
+    width: 350px;
+    height: 400px;
+    margin: auto;
+    position: absolute;
+  }
+}
+
+#page1, #contDiv {
+  margin: 0;
+  padding : 0;
+}
+
+#listDiv {
+  position: absolute;
+  top: 0px;
+  left:0px;
+  right: 0px;
+  bottom: 0px;
+  margin-top: 55px;
+  margin-left: 11px;
+  margin-bottom: 45px;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
+#list{
+  list-style-type:none;
+  margin: 10px;
+}
+
+#users {
+  margin-right: 6px
+}
+
+.center {
+  margin: 0;
+  position: inherit;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.video-chat-container {
+  flex: 1;
+  position: relative;
+}
+
+.remote-video {
+  border: 1px solid #cddfe7;
+  width: 100%;
+  height: 315px;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+}
+
+.local-video {
+  position: absolute;
+  border: 1px solid #cddfe7;
+  bottom: 4px;
+  right: 0px;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  width: 150px;
+  height: 112px;
+}
